objects/Lead.object
<CustomObject>
    <fields>
        <fullName>X2_Subscriber_Status_Out__c</fullName>
        <description>Created for reporting purposes. Date Lead, Lead Status moved out of &quot;2-Subscriber&quot;.</description>
        <inlineHelpText>Date Lead, Lead Status moved out of &quot;2-Subscriber&quot;.</inlineHelpText>
        <label>2-Subscriber Status Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3_Prospect_Status_In__c</fullName>
        <description>Created for reporting purposes. Date Lead, Lead Status changed to &quot;3-Prospect&quot;.</description>
        <inlineHelpText>Date Lead, Lead Status changed to &quot;3-Prospect&quot;.</inlineHelpText>
        <label>3-Prospect Status In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3_Prospect_Status_Out__c</fullName>
        <description>Created for reporting purposes. Date Lead, Lead Status moved out of &quot;3-Prospect&quot;.</description>
        <inlineHelpText>Date Lead, Lead Status moved out of &quot;3-Prospect&quot;.</inlineHelpText>
        <label>3-Prospect Status Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X4_MQL_Status_In__c</fullName>
        <description>Created for reporting purposes. Date Lead, Lead Status changed to &quot;4-MQL&quot;.</description>
        <inlineHelpText>Date Lead, Lead Status changed to &quot;4-MQL&quot;.</inlineHelpText>
        <label>4-MQL Status In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X4_MQL_Status_Out__c</fullName>
        <description>Created for reporting purposes. Date Lead, Lead Status moved out of &quot;4-MQL&quot;.</description>
        <inlineHelpText>Date Lead, Lead Status moved out of &quot;4-MQL&quot;.</inlineHelpText>
        <label>4-MQL Status Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X5_Intro_Call_Scheduled_Status_In__c</fullName>
        <description>Created for reporting purposes. Date Lead, Lead Status changed to &quot;5-Intro Call Scheduled&quot;.</description>
        <inlineHelpText>Date Lead, Lead Status changed to &quot;5-Intro Call Scheduled&quot;.</inlineHelpText>
        <label>5-Intro Call Scheduled Status In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X5_Intro_Call_Scheduled_Status_Out__c</fullName>
        <description>Created for reporting purposes. Date Lead, Lead Status moved out of &quot;5-Intro Call Scheduled&quot;.</description>
        <inlineHelpText>Date Lead, Lead Status moved out of &quot;5-Intro Call Scheduled&quot;.</inlineHelpText>
        <label>5-Intro Call Scheduled Status Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X6_Intro_Call_Held_Status_In__c</fullName>
        <description>Created for reporting purposes. Date Lead, Lead Status changed to &quot;6-Intro Call Held&quot;.</description>
        <inlineHelpText>Created for reporting purposes. Date Lead, Lead Status changed to &quot;6-Intro Call Held&quot;.</inlineHelpText>
        <label>6-Intro Call Held Status In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X6_Intro_Call_Held_Status_Out__c</fullName>
        <description>Created for reporting purposes. Date Lead, Lead Status moved out of &quot;6-Intro Call Held&quot;.</description>
        <inlineHelpText>Date Lead, Lead Status moved out of &quot;6-Intro Call Held&quot;.</inlineHelpText>
        <label>6-Intro Call Held Status Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZI_Company_ID__c</fullName>
        <description>Internal ID Number of the Matching ZoomInfo Company Profile.</description>
        <label>ZI Company ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Company_Name__c</fullName>
        <description>Name of Business.</description>
        <label>ZI Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZI_Last_Verified_Date__c</fullName>
        <description>ZoomInfo Last Verified Date of Employment Details.</description>
        <label>ZI Last Verified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Email__c</fullName>
        <description>We use this field to overwrite the email id every time we enrich the record with ZoomInfo.</description>
        <label>ZoomInfo Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Industry__c</fullName>
        <description>We use this field to get the Zoominfo industry value which is a mix of primary and sub-industry values from ZoomInfo.</description>
        <label>ZoomInfo Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_Phone__c</fullName>
        <description>We use this field to overwrite the phone # every time we enrich the record with ZoomInfo.</description>
        <label>ZoomInfo Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_State__c</fullName>
        <description>We use this field to get the State from Zoominfo as text since we have State as picklist values and CRM State values are always matching with ZoomInfo State values.</description>
        <label>ZoomInfo State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoomInfo_URL__c</fullName>
        <description>URL for person&apos;s ZoomInfo profile</description>
        <label>ZoomInfo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>algnlta__Lock_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, lead will be &quot;locked&quot; which prevents the lead from being matched to an account and auto-converting.</description>
        <inlineHelpText>If checked, lead will be &quot;locked&quot; which prevents the lead from being matched to an account and auto-converting.</inlineHelpText>
        <label>Lock Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>algnlta__Matched_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to account used in Align.ly Lead-to-Account Matching.</description>
        <inlineHelpText>The account matched to the lead. Updated by Align.ly and/or manually.</inlineHelpText>
        <label>Matched Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matched Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nCino_Integration__c</fullName>
        <label>nCino Integration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Account Engagement Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Account Engagement and are available to customers using Account Engagement Pro Edition and Account Engagement Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Account Engagement Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Account Engagement Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Account Engagement campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Account Engagement Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Account Engagement Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when an Account Engagement tracked anonymous visitor first became a known prospect.</description>
        <label>Account Engagement Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Account Engagement created date represents the date and time at which the Prospect record was created in Account Engagement. This will often differ from your Salesforce.com created date.</description>
        <label>Account Engagement Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Account Engagement First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Account Engagement First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Account Engagement First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Account Engagement First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Account Engagement grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Account Engagement Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Account Engagement Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Account Engagement Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Account Engagement score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Account Engagement. From there you can view his or her complete activity history. This URL is generated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_action__c</fullName>
        <label>user_action</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>A_B_Test_Leads_for_Marketing</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Source_Type__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Current_Sequence_Name__c</columns>
        <columns>Current_Sequence_Status__c</columns>
        <columns>Current_Sequence_User_Name__c</columns>
        <columns>pi__campaign__c</columns>
        <columns>pi__conversion_object_name__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>#A/B Test Leads for Marketing</label>
        <sharedTo>
            <group>A_B_Test_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A_B_Test_Leads_for_SDRs</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Source_Type__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Current_Sequence_Name__c</columns>
        <columns>Current_Sequence_Status__c</columns>
        <columns>Current_Sequence_User_Name__c</columns>
        <columns>pi__campaign__c</columns>
        <columns>pi__conversion_object_name__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>#A/B Test Leads for SDRs</label>
        <sharedTo>
            <group>A_B_Test_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bad_Phone_Leads_to_Enrich</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>Lead_Stage__c</columns>
        <columns>Lost_Reason__c</columns>
        <columns>Call_Disposition__c</columns>
        <columns>MA_Review_Date__c</columns>
        <columns>SDR_Notes__c</columns>
        <columns>MA_Notes__c</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <columns>algnlta__Matched_Account__c</columns>
        <columns>Matched_Account_Account_Type__c</columns>
        <columns>Matched_Account_Status__c</columns>
        <columns>Matched_Account_Owner__c</columns>
        <columns>Matched_Account_SDR__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lost_Reason__c</field>
            <operation>equals</operation>
            <value>Bad Email &amp; Bad Phone,Bad Phone</value>
        </filters>
        <filters>
            <field>Call_Disposition__c</field>
            <operation>contains</operation>
            <value>Bad Phone,Bad Mobile,No Number Present</value>
        </filters>
        <label># Bad Phone Leads to Enrich</label>
        <sharedTo>
            <group>Market_Analysts_Group</group>
            <group>Queue_Manager</group>
            <role>VP_of_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPQ_Pre_Launch_popup</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Stage__c</columns>
        <columns>Lost_Reason__c</columns>
        <columns>Lead_Type__c</columns>
        <columns>Integration__c</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>Current_Sequence_Name__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Sequence_Name__c</field>
            <operation>equals</operation>
            <value>,None</value>
        </filters>
        <label>#CPQ Pre-Launch popup</label>
        <language>en_US</language>
        <sharedTo>
            <role>General_and_Administrative</role>
            <role>Inbound_SDR</role>
            <role>Marketing_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cold_Inbound_Queue</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Source_Type__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>pi__campaign__c</columns>
        <columns>pi__conversion_object_name__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>startsWith</operation>
            <value>Inactive,Inbound</value>
        </filters>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Cold,Not Ready</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>1-Lead,2-Subscriber,3-Prospect</value>
        </filters>
        <label>#Cold Inbound Queue</label>
        <sharedTo>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Event_Lead_Asisgnment</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>#Event Lead Asisgnment</label>
        <sharedTo>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inactive_Lead_Owner_Hot_Warm_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Source_Type__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>pi__campaign__c</columns>
        <columns>pi__conversion_object_name__c</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_Status__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Hot,Warm</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>Inbound Queue</value>
        </filters>
        <label>#Inactive Lead Owner Hot&amp;Warm Leads</label>
        <sharedTo>
            <group>Market_Analysts_Group</group>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inbound_Queue</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Source_Type__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>pi__campaign__c</columns>
        <columns>pi__conversion_object_name__c</columns>
        <columns>pi__last_activity__c</columns>
        <columns>pi__created_date__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>startsWith</operation>
            <value>Inactive,Inbound</value>
        </filters>
        <label>#Inbound Queue</label>
        <sharedTo>
            <role>Marketing_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inbound_Queue_Lead</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Source_Type__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>pi__campaign__c</columns>
        <columns>pi__conversion_object_name__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>startsWith</operation>
            <value>Inactive,Inbound</value>
        </filters>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Hot</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>4-MQL,5-Intro Call Scheduled,6-Intro Call Held</value>
        </filters>
        <label>#Hot Inbound Queue</label>
        <sharedTo>
            <group>Queue_Manager</group>
            <role>VP_of_Strategic_Marketing</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LeadsToDelete</fullName>
        <columns>MA_Notes__c</columns>
        <columns>MA_Review_Date__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Type__c</columns>
        <columns>Lead_Stage__c</columns>
        <columns>Lost_Reason__c</columns>
        <columns>LEAD.DO_NOT_CALL</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <columns>pi__score__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delete_From_CRM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>#LeadsToDelete</label>
        <sharedTo>
            <group>Market_Analysts_Group</group>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LeadsToRefine</fullName>
        <booleanFilter>(1 AND 2 AND 3) OR ( 3 AND 4)</booleanFilter>
        <columns>MA_Review_Date__c</columns>
        <columns>MA_Notes__c</columns>
        <columns>Tag__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Lead_Stage__c</columns>
        <columns>Lost_Reason__c</columns>
        <columns>Call_Disposition__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Stage__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </filters>
        <filters>
            <field>Lost_Reason__c</field>
            <operation>equals</operation>
            <value>Bad Email,Bad Email &amp; Bad Phone,Bad Phone,Changed Organization</value>
        </filters>
        <filters>
            <field>Delete_From_CRM__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Call_Disposition__c</field>
            <operation>contains</operation>
            <value>Bad Phone,Bad Mobile,No Number Present</value>
        </filters>
        <label>#LeadsToRefine</label>
        <sharedTo>
            <group>Market_Analysts_Group</group>
            <group>Queue_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads_Outreach_io_Sequences</fullName>
        <columns>Current_Sequence_Name__c</columns>
        <columns>Current_Sequence_Status__c</columns>
        <columns>Current_Sequence_User_Name__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Stage__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Current_Sequence_Name__c</field>
            <operation>notEqual</operation>
            <value>,None</value>
        </filters>
        <label>My Leads in Outreach Sequences</label>
    </listViews>
    <listViews>
        <fullName>Partner_Team_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>#Partner Team Queue</label>
        <queue>Partner_Team_Queue</queue>
        <sharedTo>
            <group>Queue_Manager</group>
            <role>VP_of_Strategic_Marketing</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Title_Score_Needed</fullName>
        <columns>Title_Category_Score__c</columns>
        <columns>Title_Category__c</columns>
        <columns>LEAD.TITLE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Stage__c</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Title_Category_Score__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Lead_Stage__c</field>
            <operation>equals</operation>
            <value>Nurture,Open</value>
        </filters>
        <filters>
            <field>Delete_From_CRM__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>#Title Category Score Needed</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Type__c</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>pi__campaign__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>pi__last_activity__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>Inbound</value>
        </filters>
        <label>1. My Today&apos;s Inbound Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Lead_Layout</fullName>
        <active>false</active>
        <businessProcess>Lead Process</businessProcess>
        <label>Lead Layout</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>If_Competitor_is_Others_Specify_it</fullName>
        <active>false</active>
        <errorConditionFormula>IF(INCLUDES(Competitor__c,&quot;Others&quot;),Other_Competitors__c==null,false)</errorConditionFormula>
        <errorDisplayField>Other_Competitors__c</errorDisplayField>
        <errorMessage>Other_Competitors__c field cannot be left blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>false</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_Company_Id_Value</fullName>
        <active>false</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandate_Other_Integration</fullName>
        <active>false</active>
        <description>Mandate Other Integration when &apos;Other&apos; is chosen for &apos;Integration&apos;.</description>
        <errorConditionFormula>ISPICKVAL(  Integration__c , &apos;Other&apos;) &amp;&amp;
  ISBLANK(  Other_Integration__c  )</errorConditionFormula>
        <errorDisplayField>Other_Integration__c</errorDisplayField>
        <errorMessage>Please enter the name of the integration when &apos;Other&apos; is chosen for &apos;Integration&apos;.</errorMessage>
    </validationRules>
</CustomObject>